Working copy.  Fixed lint issues